tests/parse_error/fn_named_class.dada
fn class() {
#! ^^^^^ expected an identifier
#!      ^^ expected an identifier
#!      ^^ expected a module-level item
#! expected a module-level item
}